<resources>
    <string name="app_name">Color Enhance</string>
    <!--Main Activity-->
    <string name="textView_status">Status :</string>
    <string name="enabled">Enabled</string>
    <string name="disabled">Disabled</string>
    <string name="preset_applied_name">\"%1$s\" applied</string>
    <string name="textView_mainSwitch">Main Switch</string>
    <string name="textView_mainSwitch_description">Toggle Color Enhance On/Off</string>
    <string name="textView_selectPreset">Select Preset</string>
    <string name="textView_selectPreset_description">Select a preset to apply</string>
    <string name="textView_backup">Backup</string>
    <string name="textView_backup_description">Backup current settings</string>
    <string name="textView_restore">Restore</string>
    <string name="textView_restore_description">Restore backed up settings</string>
    <string name="no_preset_selected">No Preset Selected to Apply!</string>
    <!--Dialog-->
    <string name="dialog_title_no_root">No Root access</string>
    <string name="dialog_description_no_root">Root is required for Color Enhance to work.</string>
    <string name="dialog_title_no_kcal">No KCAL support</string>
    <string name="dialog_description_no_kcal">Your Kernel does not support KCAL, it is required for Color Enhance to
        work.
    </string>
    <!--Backup-->
    <string name="backup_dialog_title">Backup Name</string>
    <string name="backup_name_hint">Enter a name for backup&#8230;</string>
    <string name="failed_to_backup">Failed to Backup!</string>
    <string name="backup_successful">Backup Successful</string>
    <!--Restore-->
    <string name="restore">Restore</string>
    <string name="nothing_to_restore">Nothing To Restore</string>
    <string name="restore_dialog_title">Restore?</string>
    <string name="restore_dialog_detail">Are you sure you want to restore \"%1$s\" ?</string>
    <string name="restore_failed">Restore failed!</string>
    <string name="restore_successful">Restored successfully</string>
    <!--Presets-->
    <string name="presets">Presets</string>
    <string name="no_connection">No Internet Connection</string>
    <string name="preset_failed">Failed to apply!</string>
    <string name="preset_successful">Applied Successfully</string>
    <!--Menu-->
    <string name="settings">Settings</string>
    <string name="about">About</string>
    <!--Settings-->
    <string name="apply_on_boot">Apply on Boot</string>
    <string name="apply_on_boot_description">Automatically apply selected preset after device boots.</string>
    <string name="notifications">Notifications</string>
    <string name="notifications_description">Show notifications when new presets are available.</string>
</resources>
