<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fitsSystemWindows="true"
        android:orientation="vertical"
        tools:context=".ui.activity.SettingsActivity">

    <com.google.android.material.appbar.AppBarLayout
            android:id="@+id/appBar_settings"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:theme="@style/AppTheme.CustomHeaderText"
            app:elevation="0dp">

        <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

            <androidx.appcompat.widget.Toolbar
                    android:id="@+id/toolbar_settings"
                    android:layout_width="match_parent"
                    android:layout_height="?attr/actionBarSize"
                    android:background="?attr/colorPrimary"
                    app:elevation="0.0dp"
                    app:navigationIcon="@drawable/ic_close_grey_24dp"
                    app:popupTheme="@style/AppTheme.PopupOverlay"/>

            <TextView
                    android:id="@+id/header_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:text="@string/settings"
                    android:textSize="20sp"/>

        </RelativeLayout>

    </com.google.android.material.appbar.AppBarLayout>

    <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginStart="24dp"
            android:layout_marginEnd="24dp"
            android:background="@color/lightGrey"/>

    <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
        <TextView
                android:id="@+id/textView_applyOnBoot"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/apply_on_boot"
                android:paddingStart="12dp"
                android:paddingEnd="12dp"
                android:paddingTop="12dp"
                android:textColor="@color/black"
                android:textSize="@dimen/card_header"/>

        <TextView
                android:id="@+id/textView_applyOnBootDescription"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_below="@id/textView_applyOnBoot"
                android:paddingStart="12dp"
                android:paddingEnd="12dp"
                android:paddingTop="12dp"
                android:text="@string/apply_on_boot_description"/>
        <androidx.appcompat.widget.SwitchCompat
                android:id="@+id/switch_applyOnBoot"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_toEndOf="@id/textView_applyOnBoot"
                android:layout_marginTop="22dp"
                android:layout_marginEnd="12dp"/>
    </RelativeLayout>

    <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginTop="8dp"
            android:background="@color/lightGrey"/>

    <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
        <TextView
                android:id="@+id/textView_notifications"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/notifications"
                android:paddingStart="12dp"
                android:paddingEnd="12dp"
                android:paddingTop="12dp"
                android:textColor="@color/black"
                android:textSize="@dimen/card_header"/>

        <TextView
                android:id="@+id/textView_notificationsDescription"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_below="@id/textView_notifications"
                android:paddingStart="12dp"
                android:paddingEnd="12dp"
                android:paddingTop="12dp"
                android:text="@string/notifications_description"/>
        <androidx.appcompat.widget.SwitchCompat
                android:id="@+id/switch_notifications"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_toEndOf="@id/textView_notifications"
                android:layout_marginTop="22dp"
                android:layout_marginEnd="12dp"/>
    </RelativeLayout>

    <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginTop="8dp"
            android:background="@color/lightGrey"/>


</LinearLayout>